--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <div class="container">
           <div class="title">To-Do List</div>
           <div>
-            <input type="text" id="input" placeholder="Add a new task..." />
+            <input
+              type="text"
+              id="input"
+              class="list-input"
+              placeholder="Add a new task..."
+            />
             <button id="addBtn">Add</button>
           </div>
-          <div></div>
         </div>
-        <div class="list-text" id="listText">
-          <input type="checkbox" name="checkbox" class="task__checkbox" />
-          <p id="task__checkbox"></p>
-          <button class="task__delete">Delete</button>
-        </div>
+        <div class="list-text" id="listText"></div>
       </div>
     </div>
     <script src="./script.js"></script>
