--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
             <button id="addBtn">Add</button>
           </div>
         </div>
-        <div class="list-text" id="listText"></div>
+        <div class="list-text" id="listText">No tasks yet. Add one above!</div>
+      </div>
+      <div class="footer">
+        <div class="footer-text">Powered By</div>
+        <a class="footer-link" href="https://pinecone.mn/">Pinecone Academy</a>
       </div>
     </div>
     <script src="./script.js"></script>
