--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             <button id="addBtn">Add</button>
           </div>
         </div>
+        <div class="btn--section" id="buttonSection">
+          <button class="buttons" id="allBtn">All</button>
+          <button class="buttons" id="activeBtn">Active</button>
+          <button class="buttons" id="completeBtn">Completed</button>
+        </div>
         <div class="list-text" id="listText">No tasks yet. Add one above!</div>
       </div>
       <div class="footer">
