--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
           <button class="buttons" id="completeBtn">Completed</button>
         </div>
         <div class="list-text" id="listText">No tasks yet. Add one above!</div>
-        <div class="completed--task" id="completedTask"></div>
+        <div class="complete--value">
+          <div class="completed--task" id="completedTask"></div>
+          <button id="clearComp" onclick="clearComplete()">
+            Clear completed
+          </button>
+        </div>
       </div>
       <div class="footer">
         <div class="footer-text">Powered By</div>
